fix: [404] Spacing adjustments from working session with Design team

--- a/src/pages/Error/error.less
+++ b/src/pages/Error/error.less
@@ -3,7 +3,7 @@
    Page-specific styles for the error pages.
    ========================================================================== */
 .error_action_container {
-  margin: 30pxem 0;
+  margin: 0;
 }
 .error_action_container .a-btn {
   display: inline-block;
@@ -12,7 +12,7 @@
 @media only all and (min-width: 37.5625em) {
   .error_action_container {
     display: table;
-    margin: 30px 0;
+    margin: 15px 0 0;
   }
   .error_action_container .error_action_col {
     display: table-cell;
@@ -23,7 +23,7 @@
     border-right: 1px solid #b4b5b6;
   }
   .error_action_container .a-btn {
-    margin: 0.46875em 0;
+    margin: 0;
   }
   .error_action_container .contact-us {
     margin-top: 30px;
@@ -64,7 +64,7 @@
   }
 }
 .error_copy_container .lead-paragraph {
-  margin-top: 0.9375em !important;
+  margin-top: 15px !important;
 }
 
 .error_main .a-link__jump {
@@ -74,7 +74,7 @@
 .error_main__404 .content_main {
   background: transparent url('/plug-269x327.png') no-repeat top right;
   background-size: 36%;
-  padding-top: 1.875em;
+  padding-top: 45px;
   /* stylelint-disable-next-line media-feature-name-no-unknown */
 }
 @media (min-device-pixel-ratio: 2),
@@ -91,7 +91,7 @@
 }
 @media only all and (min-width: 37.5625em) {
   .error_main__404 .content_main {
-    margin-bottom: 30px;
+    margin-bottom: 45px;
     padding-bottom: 0;
   }
 }
